# IgCraft

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
config/: graft_cdrs.yaml  inpaint.yaml  inverse_fold.yaml  sample.yaml  train_paired.yaml  train_structures.yaml  train_unpaired_vh.yaml  train_unpaired_vl.yaml
config/model/: paired_bfn.yaml  unpaired_vh_bfn.yaml  unpaired_vl_bfn.yaml
config/model/bfn/: discrete.yaml
config/model/bfn/schedule/: default.yaml
config/model/cfg/: defaults.yaml  paired.yaml
config/model/datamodule/: paired.yaml  unpaired_vh.yaml  unpaired_vl.yaml
config/model/datamodule/vh_tokenizer/: defaults.yaml
config/model/datamodule/vl_tokenizer/: defaults.yaml
config/model/network/: paired.yaml
config/model/network/backbones/: 120M.yaml  test.yaml
config/trainer/: defaults.yaml
igcraft/bfn/: bfn.py  schedule.py
igcraft/data/: antibody_utils.py  constants.py  pdb.py  structure.py
igcraft/model/: __init__.py  config.py  datamodule.py  model.py  network.py  utils.py
igcraft/nn/: geometric.py  transformer.py
scripts/: graft_cdrs.py  inpaint.py  inverse_fold.py  sample.py  train.py
scripts/data/: fasta_to_csv.py  pdbs_to_hdf5.py
